<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_monitor">

    <fragment
        android:id="@+id/navigation_monitor"
        android:name="com.js8call.example.ui.MonitorFragment"
        android:label="@string/nav_monitor" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.js8call.example.ui.MessagesFragment"
        android:label="@string/nav_messages">
        <action
            android:id="@+id/action_messages_to_conversation"
            app:destination="@id/navigation_conversation" />
        <action
            android:id="@+id/action_messages_to_everything"
            app:destination="@id/navigation_everything" />
    </fragment>

    <fragment
        android:id="@+id/navigation_everything"
        android:name="com.js8call.example.ui.EverythingFragment"
        android:label="@string/everything_title" />

    <fragment
        android:id="@+id/navigation_conversation"
        android:name="com.js8call.example.ui.ConversationFragment"
        android:label="{callsign}">
        <argument
            android:name="callsign"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.js8call.example.ui.SettingsFragment"
        android:label="@string/nav_settings" />
</navigation>
